Correção de erro

--- a/execicio_html.html
+++ b/execicio_html.html
@@ -17,18 +17,19 @@
     
     <form>
         
-        <label>Digite seu nome: </label>
-        <input type="text" placeholder="Insira seu nome" />
+        <label for="nome">Digite seu nome: </label>
+        <input id= "nome" "text" placeholder="nome" />
             <br/>
 
-        <label>Digite seu e-mail: </label>
-        <input type="email" placeholder="Insira seu e-mail" />
-            <br/>
-        <label>Digite sua senha: </label>
-        <input type="password" placeholder="Insira sua senha" />
+        <label for="e-mail">Digite seu e-mail: </label>
+        <input id="e-mail" "email" placeholder="email" />
             <br/>
 
-        <button>
+        <label for="senha">Digite sua senha: </label>
+        <input id="senha" type="password" placeholder="senha" />
+            <br/>
+
+        <button type="submit">
             Cadastrar
         </button>
 
